#13296 - Code clean-up